--- a/config.yml
+++ b/config.yml
@@ -4,8 +4,11 @@ faasapiurl: http://10.231.143.223:18991/hit/xrobot
 cronstr: 0/20 * * * * ?
 namenodejmx: http://10.231.144.251:50070/jmx
 resourcemanagerjmx: http://10.231.144.251:8088
-resourcemanagerexporterIp: localhost
+resourcemanagerexporterip: localhost
 resourcemanagerexporterport: 9088
+journalnodeexporterip: localhost
+journalnodeexporterport: 9071
+journalnodeexporterjmx: http://hdp03:8480/jmx
 startsendtime: 2017-01-02 08:08:08
 sendmaxcountperday: 100
 devices:
